--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -1,4 +1,4 @@
-<header style="background-image: url(https://images.pexels.com/photos/14702039/pexels-photo-14702039.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1); background-size: cover">
+<header style="background-image: url({{ site.backgroundImage }}); background-size: cover">
   <nav class="container">
     <ul>
       <li><h2><a href="/" style="color: white;">{{ site.name }}</a></h2></li>
