--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -1,11 +1,11 @@
 <header style="background-image: url({{ site.backgroundImage }}); background-size: cover">
-  <nav class="container">
+  <nav class="uk-padding">
     <ul>
       <li><h2><a href="/" style="color: white;">{{ site.name }}</a></h2></li>
     </ul>
     <ul>
       {% for nav in collections.primary reversed %}
-        <li {% if page.url == nav.url %}aria-current="page"{% endif %}>
+        <li {% if page.url == nav.url %}class="uk-active"{% endif %}>
           <a href="{{ nav.url }}">{{ nav.data.title }}</a>
         </li>
       {% endfor %}
